Added images and sound files, moved scripts into scripts directory.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <!--<link rel="stylesheet" href="dist/css/bootstrap.min.css"/>-->
         <link rel="stylesheet" href="css/aidemo.min.css"/>
 
-        <script src="libs-all.min.js" defer></script>
+        <script src="scripts/libs-all.min.js" defer></script>
         <script src="templates/aidemo-templates.js" defer></script>
-        <script src="aidemo.min.js" defer></script>
+        <script src="scripts/aidemo.min.js" defer></script>
     </head>
     <body ng-app="aidemo.app" class="app-container">
         <header class="app-header" ui-view="header"></header>
