Changed site title.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>AI Demos</title>
-        <!--<link rel="stylesheet" href="dist/css/bootstrap.min.css"/>-->
+        <title>Acrylicorner, Holden's Tech Dev Blog and Portfolio</title>
         <link rel="stylesheet" href="css/aidemo.min.css"/>
 
         <script src="scripts/libs-all.min.js" defer></script>
