--- a/presentations/howToUseJasmine.html
+++ b/presentations/howToUseJasmine.html
@@ -14,11 +14,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="../css/reveal.min.css">
-    <link rel="stylesheet" href="../css/theme/default.css" id="theme">
+    <link rel="stylesheet" href="css/reveal.min.css">
+    <link rel="stylesheet" href="css/theme/default.css" id="theme">
 
     <!-- For syntax highlighting -->
-    <link rel="stylesheet" href="../lib/css/zenburn.css">
+    <link rel="stylesheet" href="lib/css/zenburn.css">
 
     <!-- If the query includes 'print-pdf', include the PDF print sheet -->
     <script>
@@ -32,7 +32,7 @@
     </script>
 
     <!--[if lt IE 9]>
-    <script src="../lib/js/html5shiv.js"></script>
+    <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
 </head>
 
@@ -199,8 +199,8 @@
 
 </div>
 
-<script src="../lib/js/head.min.js"></script>
-<script src="../js/reveal.min.js"></script>
+<script src="lib/js/head.min.js"></script>
+<script src="js/reveal.min.js"></script>
 
 <script>
 
