--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>Acrylicorner, Holden's Tech Dev Blog and Portfolio</title>
+        <title>Acrylicorner</title>
         <link rel="stylesheet" href="css/aidemo.min.css"/>
+
+        <style>
+            .no-js-warning {
+                color: white;
+            }
+        </style>
 
         <script src="scripts/libs-all.min.js" defer></script>
         <script src="templates/aidemo-templates.js" defer></script>
@@ -12,5 +18,9 @@
     <body ng-app="aidemo.app" class="app-container">
         <header class="app-header" ui-view="header"></header>
         <div class="app-body" ui-view="main"></div>
+
+        <noscript class="no-js-warning">
+            Please enable Javascript to view content on this website!
+        </noscript>
     </body>
 </html>
