--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -11,8 +11,8 @@
 ">
 
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="http://yourdomain.com/about/">
-  <link rel="alternate" type="application/rss+xml" title="Your awesome title" href="http://yourdomain.com/feed.xml">
+  <link rel="canonical" href="http://acrylicorner.com/jekyll/about/">
+  <link rel="alternate" type="application/rss+xml" title="Your awesome title" href="http://acrylicorner.com/jekyll/feed.xml">
 </head>
 
 
