Added demos back with updated links.

--- a/demos/index.html
+++ b/demos/index.html
@@ -7,7 +7,7 @@
 
         <style>
             .no-js-warning {
-                color: white;
+                color: #e3e6ef;
             }
         </style>
 
