--- a/presentations/artificialIntelligence.html
+++ b/presentations/artificialIntelligence.html
@@ -14,12 +14,12 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
-        <link rel="stylesheet" href="css/custom.css">
+		<link rel="stylesheet" href="./css/reveal.min.css">
+		<link rel="stylesheet" href="./css/theme/default.css" id="theme">
+        <link rel="stylesheet" href="./css/custom.css">
 
 		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<link rel="stylesheet" href="./lib/css/zenburn.css">
 
 		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
@@ -33,7 +33,7 @@
 		</script>
 
 		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
+		<script src="./lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
 
@@ -53,7 +53,7 @@
                 <!--<section>-->
                     <!--<h2>What is A.I.?</h2>-->
                     <!--<p>-->
-                        <!--<img src="/image/scott.png" />-->
+                        <!--<img src="./image/scott.png" />-->
                         <!--</br>-->
                         <!--It's what this guy does.-->
                     <!--</p>-->
@@ -175,8 +175,7 @@
                     </section>
                     <section>
                         <h2>The end result</h2>
-                        <!--<img src="/image/lifeScreen.png" />-->
-                        <img src="/image/gameOfLife.png" style="height:500px;"/>
+                        <img src="./image/gameOfLife.png" style="height:500px;"/>
                     </section>
                     <section>
                         <h1>Code Walkthrough</h1>
@@ -208,7 +207,7 @@
                     <section>
                         <h2>The end result</h2>
                         <!--<img src="/image/swarmScreen.png" />-->
-                        <img src="/image/flocking.png"/>
+                        <img src="./image/flocking.png"/>
                     </section>
                     <section>
                         <h1>Code Walkthrough</h1>
@@ -243,8 +242,7 @@
                     </section>
                     <section>
                         <h2>The end result</h2>
-                        <!--<img src="/image/aStarScreen.png" />-->
-                        <img src="/image/aStar.png" />
+                        <img src="./image/aStar.png" />
                     </section>
                     <section>
                         <h1>Code Walkthrough</h1>
@@ -266,8 +264,8 @@
 
 		</div>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.min.js"></script>
+		<script src="./lib/js/head.min.js"></script>
+		<script src="./js/reveal.min.js"></script>
 
 		<script>
 
@@ -288,12 +286,12 @@
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+					{ src: './lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: './plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+					{ src: './plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
 			});
 
