--- a/presentations/howToUseGit.html
+++ b/presentations/howToUseGit.html
@@ -14,11 +14,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="css/reveal.min.css">
-    <link rel="stylesheet" href="css/theme/sky.css" id="theme">
+    <link rel="stylesheet" href="./css/reveal.min.css">
+    <link rel="stylesheet" href="./css/theme/sky.css" id="theme">
 
     <!-- For syntax highlighting -->
-    <link rel="stylesheet" href="lib/css/zenburn.css">
+    <link rel="stylesheet" href="./lib/css/zenburn.css">
 
     <!-- If the query includes 'print-pdf', include the PDF print sheet -->
     <script>
@@ -32,13 +32,13 @@
     </script>
 
     <!--[if lt IE 9]>
-    <script src="lib/js/html5shiv.js"></script>
+    <script src="../lib/js/html5shiv.js"></script>
     <![endif]-->
 </head>
 
 <body>
 <!--style="-->
-<!--background-image: url(/presentations/image/chipBrain.jpg);-->
+<!--background-image: url(/image/chipBrain.jpg);-->
 <!--background-repeat: no-repeat;-->
 <!--background-attachment: fixed;-->
 <!--background-position: center;-->
@@ -60,7 +60,7 @@
         <section>
             <h2>What is GIT?</h2>
             <p>
-                <img src="/presentations/image/Git-Logo.png" style="width:300px; height: 125px;"/>
+                <img src="./image/Git-Logo.png" style="width:300px; height: 125px;"/>
                 </br>
                 A completely different type of VCS from the ones you're used to.
             <ul>
@@ -116,16 +116,16 @@
             <section>
                 <h3>The "Areas" of GIT</h3>
                 <p>
-                    <a href="/presentations/image/git-areas.png">
-                        <img src="/presentations/image/git-areas.png" style="width:600px; height: 331px;"/>
+                    <a href="./image/git-areas.png">
+                        <img src="./image/git-areas.png" style="width:600px; height: 331px;"/>
                     </a>
                 </p>
             </section>
             <section>
                 <h3>The mythical .git dir revealed!</h3>
                 <p>
-                    <a href="/presentations/image/gitDirScreenshot.png">
-                        <img src="/presentations/image/gitDirScreenshot.png" style="width:600px; height: 331px;"/>
+                    <a href="./image/gitDirScreenshot.png">
+                        <img src="./image/gitDirScreenshot.png" style="width:600px; height: 331px;"/>
                     </a>
                 </p>
             </section>
@@ -420,8 +420,8 @@
                         <li>Give the key a title and paste the copied RSA SSH key from earlier into the Key field</li>
                     </small>
                 </ul>
-                <a href="/presentations/image/my-github-ssh.png">
-                    <img src="/presentations/image/my-github-ssh.png" style="width:400px; height: 215px;"/>
+                <a href="./image/my-github-ssh.png">
+                    <img src="./image/my-github-ssh.png" style="width:400px; height: 215px;"/>
                 </a>
                 </p>
             </section>
@@ -435,8 +435,8 @@
                         <li>Congratulations, you've cloned a GIT repo and are now ready to work!</li>
                     </small>
                 </ul>
-                <a href="/presentations/image/my-github-repo.png">
-                    <img src="/presentations/image/my-github-repo.png" style="width:400px; height: 215px;"/>
+                <a href="./image/my-github-repo.png">
+                    <img src="./image/my-github-repo.png" style="width:400px; height: 215px;"/>
                 </a>
                 </p>
             </section>
@@ -455,8 +455,8 @@
             </section>
             <section>
                 <h4>A GIT project model</h4>
-                <a href="/presentations/image/git-model@2x.png">
-                    <img src="/presentations/image/git-model@2x.png" style="width:40%; height: 40%;"/>
+                <a href="./image/git-model@2x.png">
+                    <img src="./image/git-model@2x.png" style="width:40%; height: 40%;"/>
                 </a>
                 <br>
                 <small>Image taken from <a href="http://nvie.com/posts/a-successful-git-branching-model/">Vincent Driessen's article</a></small>
@@ -629,9 +629,9 @@
                     collective origin repo, go to your forked repo on github and
                     click on either green button to initiate a pull request.<br>
 
-                    <img src="/presentations/image/github_smallbutton.png" style="width:47px; height: 37px;"/><br>
+                    <img src="./image/github_smallbutton.png" style="width:47px; height: 37px;"/><br>
                     OR<br>
-                    <img src="/presentations/image/github_largebutton.png" style="width:800px; height: 49px;"/>
+                    <img src="./image/github_largebutton.png" style="width:800px; height: 49px;"/>
                     <ul>
                         <li>
                             Give your pull request a name and write a short blurb about what you did.<br>
@@ -690,8 +690,8 @@
 
 </div>
 
-<script src="lib/js/head.min.js"></script>
-<script src="js/reveal.min.js"></script>
+<script src="./lib/js/head.min.js"></script>
+<script src="./js/reveal.min.js"></script>
 
 <script>
 
@@ -712,12 +712,12 @@
 
         // Optional libraries used to extend on reveal.js
         dependencies: [
-            { src: '../lib/js/classList.js', condition: function() { return !document.body.classList; } },
-            { src: '../plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-            { src: '../plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-            { src: '../plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-            { src: '../plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-            { src: '../plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+            { src: './lib/js/classList.js', condition: function() { return !document.body.classList; } },
+            { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+            { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+            { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+            { src: './plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+            { src: './plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
         ]
     });
 
