--- a/presentations/introToGaming_part1.html
+++ b/presentations/introToGaming_part1.html
@@ -48,8 +48,20 @@
                     </p>
                 </section>
 
-                <!-- Course Outline -->
                 <section>
+                  <h2>Course Overview</h2>
+                    <p>
+                      Over the next few weeks, you'll learn the fundamentals of game development.
+                      We'll cover the anatomy of a game, basic physics, and even some artificial intelligence.
+                      <br><br>
+                      At the end of the class you'll be able to build your own 2D game
+                      which will be demonstrated as the class capstone project. Primary
+                      technology used will be Javascript ES6 and <a href="https://phaser.io/">Phaser</a>.
+                    </p>
+                </section>
+
+                <!-- Course Outline -->
+                <!-- <section>
                   <h3>Course Outline</h3>
                   <p>
                     <ul>
@@ -57,14 +69,22 @@
                       <li>Part 2 - Physics</li>
                       <li>Part 3 - Enemies</li>
                       <li>Part 4 - Optimization</li>
-                      <li>Part 5 - </li>
-                      <li>Part 6 - </li>
                     </ul>
                   </p>
-                </section>
+                </section> -->
 
-                <!-- AAA Games Examples -->
+                <!-- What is a Game? -->
                 <section>
+                  <section>
+                    <h2>So what is a game?</h2>
+                    <p>
+                      Games are media just like movies and books, but what separates them from these things?
+                      <br><br>
+                      They're <i>interactive</i> media! This makes it a powerful way to tell stories and enjoy
+                      all kinds of experiences!
+                    </p>
+                  </section>
+
                   <section>
                     <h2>Modern AAA Games</h2>
                     <p>Amazing Games with tons of developers and huge budgets!</p>
@@ -84,6 +104,13 @@
                     <img src="./image/introToGame_1/darkSouls3.jpg" />
                     <p><small><i>Dark Souls 3 - From Software</i></small></p>
                   </section>
+
+                  <section>
+                    <h2>Those look cool!</h2>
+                    <p>
+                      When can I make games like those?!
+                    </p>
+                  </section>
                 </section>
 
                 <!-- Smaller Games -->
@@ -91,9 +118,8 @@
                   <section>
                     <h2>Hold on a second!</h2>
                     <p>
-                      We can't easily make that on our own and it's far
-                      easier to understand the concepts of a what comprises a
-                      game by starting with the basics!
+                      We need to understand the basics of a game first! And that's
+                      most easily done with simpler (probably 2D) games!
                     </p>
                   </section>
 
@@ -111,18 +137,23 @@
                     <img src="./image/introToGame_1/superMarioBros3.jpg" />
                     <p><small><i>Super Mario Bros. 3 - Nintendo</i></small></p>
                   </section>
+
+                  <section>
+                    <h2>Okay, so how do I make that?</h2>
+                    <p>
+                      I'm glad you asked!
+                    </p>
+                  </section>
                 </section>
 
                 <!-- The core concepts -->
                 <section>
                   <section>
-                    <h2>So where do we start?</h2>
+                    <h2>where do we start?</h2>
                     <p>
                       What actually <i>makes</i> a game?
                       </br>
                       What are the core ideas?
-                      </br></br>
-                      It's actually quite simple!
                     </p>
                   </section>
 
