Updated game dev.

--- a/presentations/artificialIntelligence.html
+++ b/presentations/artificialIntelligence.html
@@ -175,7 +175,7 @@
                     </section>
                     <section>
                         <h2>The end result</h2>
-                        <img src="./image/gameOfLife.png" style="height:500px;"/>
+                        <img src="image/ai_overview/gameOfLife.png" style="height:500px;"/>
                     </section>
                     <section>
                         <h1>Code Walkthrough</h1>
@@ -207,7 +207,7 @@
                     <section>
                         <h2>The end result</h2>
                         <!--<img src="/image/swarmScreen.png" />-->
-                        <img src="./image/flocking.png"/>
+                        <img src="image/ai_overview/flocking.png"/>
                     </section>
                     <section>
                         <h1>Code Walkthrough</h1>
@@ -242,7 +242,7 @@
                     </section>
                     <section>
                         <h2>The end result</h2>
-                        <img src="./image/aStar.png" />
+                        <img src="image/ai_overview/aStar.png" />
                     </section>
                     <section>
                         <h1>Code Walkthrough</h1>
